--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 # Book settings
-title                       : "HW2"
-author                      : "Kiril Zelenkovski"
+author                      : "Branko Bjadov, Davor Dimoski for Notebook Factory"
 copyright                   : "2021"  
-logo                        : images/logo.png 
 exclude_patterns            : [_build, Thumbs.db, .DS_Store, "**.ipynb_checkpoints"]
 
 execute:
@@ -15,7 +13,7 @@ html:
   use_edit_page_button      : true  
   use_repository_button     : true  
   use_issues_button         : true  
-  extra_navbar              : Powered by <a href="https://jupyterbook.org">Jupyter Book</a>  
+  extra_navbar              : Powered by <a href="https://jupyterbook.org">Notebook Factory</a>  
   home_page_in_navbar       : true  
   baseurl                   : ""  
   comments:
@@ -28,7 +26,7 @@ launch_buttons:
   thebe                     : false
 
 repository:
-  url                       : https://github.com/zelenkastiot/compass-operator
+  url                       : https://github.com/Notebook-Factory/RRIFT_page
   branch                    : main  
 
 parse:
